Changelog
=========


1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2017-09-04)
------------------

- Properly build ++resource++ URLs by prefixing them with portal_url instead
  of just a slash. [lgraf]


1.0.1 (2017-09-04)
------------------

- Fail gracefully if eventlog config can't be found in order to derive
  log location from it. Instead of potentially preventing instance startup,
  log a noticeable error message using the root logger.
  [lgraf]


1.0.0 (2017-09-03)
------------------

- Introduce IStatsCollector component and implement portal_types collector. [mathias.leimgruber]

- Rework ContenStats integration. Move "getting the content stats" from the view
  to it's own module/class.
  [mathias.leimgruber]

- Initial implementation.
  [lgraf]