@@ -5,7 +5,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make determining buildout path independent of working directory.
+  [lgraf]
 
 
 1.0.2 (2017-09-04)
